# MiltLibs

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.github/workflows/: build-gcc.yml  build_windows.yml  clang-tidy.yml  coverage.yml  tests.yml
demos/horner1/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/graphics/: CMakeLists.txt
libs/graphics/include/graphics/: animation_systems.h  app.h  gl_config.h  gl_state.h  glfw_callbacks.h  shader_factory.h  window_config.h  window_state.h
libs/graphics/include/graphics/app/: app.h  app_guard.h  input_state.h  lifecycle.h
libs/graphics/include/graphics/camera/: camera.h  camera.hpp  camera_controller.hpp  camera_controller_state.hpp  camera_defaults.hpp  camera_factory.h  camera_factory.hpp  camera_matrices.h  camera_matrices.hpp  camera_systems.hpp  clip_planes.h  clip_planes.hpp  orthographic_camera.h  orthographic_camera.hpp  perspective_camera.h  perspective_camera.hpp  projection_type.h  projection_type.hpp
libs/graphics/include/graphics/components/: camera.h  color.h  color.hpp  component_defaults.hpp  flash.h  flash.hpp  mesh_gl.h  mesh_gl.hpp  parent.hpp  shader.h  shader.hpp  shake.h  shake.hpp  tags.hpp  texture.h  texture.hpp  transform.h  transform.hpp  world_matrix.hpp
libs/graphics/include/graphics/engine/: app_data.h  app_data.hpp  engine.h  engine.hpp  error.h  error.hpp  result.h  result.hpp
libs/graphics/include/graphics/factories/: mesh_factories.h  prefab_factories.h  prefab_factories.hpp  shader_factories.h  shader_factories.hpp  texture_factories.h  texture_factories.hpp
libs/graphics/include/graphics/input/: glfw_key.h  glfw_key.hpp  input_state.hpp  input_systems.h  input_systems.hpp  key.h  key.hpp  key_state.h  key_state.hpp  mouse_state.hpp  scroll_state.hpp
libs/graphics/include/graphics/math/: mat4.hpp  vec3.hpp  vec4.hpp
libs/graphics/include/graphics/mesh/: mesh_factory.hpp  mesh_factory_backend.h  mesh_factory_backend.hpp  mesh_gl.hpp  vertex_attribute.h  vertex_layout.h
libs/graphics/include/graphics/platform/: gl_config.h  gl_includes.h  glfw_callbacks.h  window.h
libs/graphics/include/graphics/rendering/: renderer.h
libs/graphics/include/graphics/scene/: scene.h
libs/graphics/include/graphics/systems/: animation.h  camera.h  camera_controller_state.h  ecs_observers.h  gl_state.h  transform.h
libs/graphics/include/graphics/ui/: entity_list.h  imgui_layer.h  inspector.h  widgets.h
libs/graphics/include/graphics/utils/: math_utils.h
libs/graphics/src/: animations_systems.cpp  glfw_callbacks.cpp  shader_factory.cpp
libs/graphics/src/app/: app_guard.cpp  app_loop.cpp  lifecycle.cpp
libs/graphics/src/camera/: camera_controller_state.hpp  camera_factory.cpp  camera_systems.cpp
libs/graphics/src/components/: transform.cpp
libs/graphics/src/engine/: engine.cpp  error.cpp
libs/graphics/src/factories/: mesh_factories.cpp  prefab_factories.cpp  shader_factories.cpp  texture_factories.cpp
libs/graphics/src/input/: glfw_key.cpp  input_state.cpp  input_systems.cpp  key_state.cpp
libs/graphics/src/math/: convert_mat4.cpp  convert_mat4.hpp  convert_vec3.cpp  convert_vec3.hpp  convert_vec4.cpp  convert_vec4.hpp  mat4.cpp  vec3.cpp  vec4.cpp
libs/graphics/src/mesh/: mesh_factory.cpp  mesh_factory_backend.cpp
libs/graphics/src/platform/: glfw_callbacks.cpp  time.cpp  window.cpp
libs/graphics/src/rendering/: renderer.cpp
libs/graphics/src/systems/: animation.cpp  camera.cpp  camera_controller_state.cpp  ecs_observers.cpp  render.cpp  transform.cpp
libs/graphics/src/ui/: entity_list.cpp  imgui_layer.cpp  inspector.cpp  widgets.cpp
libs/graphics/src/utils/: math_utils.cpp
libs/nurbs/: CMakeLists.txt
libs/nurbs/include/nurbs/: bernstein.h  bezier.h  bmp.h  horner.h  vector.h
miltnurbs/: CMakeLists.txt
tests/nurbs/: CMakeLists.txt  test_bernstein.cpp  test_bezier.cpp  test_bmp.cpp  test_horner.cpp  test_vector.cpp
